# best-data-review

./: .gitignore  LICENSE  Readme.md  environment.yml  requirements.txt
data/config/: best_dta_col_info.csv  site_info.csv  sys_info.csv
dev/: data review shiny app notes.qmd  update_environment_yml.sh
shiny/: app.py  data review shiny app notes.qmd  data_any1.py  data_review1.py  data_sel.py  data_selt.py  solar_modeling_calcs.py
src/: setup.cfg  setup.py
src/best_data_review/: __init__.py  cli.py  prep1.py
src/best_data_review/bifi_calcs/: __init__.py  geometry.py  irradiance.py
src/best_data_review/shiny_app/: __init__.py  app.py  data_review1.py  data_sel.py  data_selt.py  solar_modeling_calcs.py
src/tests/: test_bifi_geometry.py
