[metadata]
name = best_data_review
version = 0.1.0
python_requires = >=3.10
description = 'BEST Data Review',
author = 'Jeff Newmiller',
author_email = 'jeff.newmiller@dnv.com',
url = 'https://github.com/jdnewmil/best-data-review',

[options]
install_requires =
    setuptools
#     numpy
#     pandas
#     shiny
#     plotnine
packages =
    best_data_review
    # best_data_review.bifi_calcs
    # best_data_review.shiny_app
# package_dir =
#     = best_data_review

[options.entry_points]
console_scripts =
    best-app = best_data_review.cli:run_best_shiny_app
#    best-prep1 = 
