[metadata]
name = best_data_review
version = 0.1.0
python_requires = >=3.10
description = 'BEST Data Review',
author = 'Jeff Newmiller',
author_email = 'jeff.newmiller@dnv.com',
url = 'https://github.com/jdnewmil/best-data-review',

[options]
install_requires =
    setuptools >= 45
    pvlib >= 0.9.4
#     numpy  # via pvlib
#     pandas  # via pvlib
    shiny >= 0.2.9
    plotnine >= 0.10.1
packages =
    best_data_review
# package_dir =
#     = best_data_review

[options.entry_points]
console_scripts =
    best-app = best_data_review.cli:run_best_shiny_app
    best-prep1 = best_data_review.prep1:prep1_data
